# MTCAD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gui/: CMakeLists.txt
gui/assets/themes/: Amber.theme  Arctic.theme  Blueprint.theme  Candyfloss.theme  Industrial.theme  OLED-Neon-Cyan.theme  Pink.theme  Purplefloss.theme
gui/src/: icon_loader.cpp  icon_loader.h  main.cpp  theme_manager.cpp
gui/src/managers/: icon_manager.cpp  path_manager.cpp  path_manager.h  theme_manager.h
gui/src/tools/: line_tool.cpp  line_tool.h  tool.h  tool_manager.cpp  tool_manager.h  tools_init.cpp  tools_init.h
gui/src/tools/sketch/create/: circle_tool.cpp  circle_tool.h  line_tool.cpp  line_tool.h  rectangle_tool.cpp  rectangle_tool.h
gui/src/windows/: extrude_window.cpp  extrude_window.h  settings_window.cpp  settings_window.h  tool_window.cpp  tool_window.h  toolbar_window.cpp  toolbar_window.h  viewport_window.cpp  viewport_window.h  workspace_browser_window.cpp  workspace_browser_window.h
installer/: AppRun.sh  MTCAD.iss  mtcad-launcher.sh  mtcad.desktop
installer/resources/: default_imgui.ini
kernel/: CMakeLists.txt
kernel/include/mtcad/: kernel.h
kernel/src/: kernel.c  mt_thread.c  mt_thread.h
